welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:3: error: T is already defined as variable T
  var T = new Array[Int](num)
      ^golomb:2: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var T:Array[Int]
      ^golomb:2: error: local variables must be initialized
  var T:Array[Int]
      ^