welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
  var T:Array[Int]
  var T = new Array[Int](num)
  T(0)=1
  for (i <- 1 to (num-1)) {
    for (j <- 1 to i) {
      T(j)=5
    }
  }
  return 5
}